--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   </head>
   <body>
     <h1>Hello world!!!</h1>
+    <img src = 'https://cdn.pixabay.com/photo/2019/07/30/05/53/dog-4372036__480.jpg'></img>
   </body>
 </html>
